part of main section

--- a/src/index.html
+++ b/src/index.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
-	<head>
-		<meta charset="utf-8">
 
-		<title>Document</title>
-		<meta name="description" content=""> <!-- seo -->
-		<meta name="keywords" content=""> <!-- seo -->
+<head>
+	<meta charset="utf-8">
 
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="format-detection" content="telephone=no">
+	<title>Колба</title>
+	<meta name="description" content=""> <!-- seo -->
+	<meta name="keywords" content=""> <!-- seo -->
 
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png"> 
-		<link rel="icon" type="image/png" sizes="192x192"  href="android-icon.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon.png">
-		
-		<link rel="stylesheet" href="css/normalize.min.css"/>
-		<!-- <link rel="stylesheet" href="css/libs.min.css"> -->
-		<link rel="stylesheet" href="css/style.min.css"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="format-detection" content="telephone=no">
 
-	</head>
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="android-icon.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon.png">
 
-	<body>
-		<header class="page-header">
-			<!-- content -->
+	<link rel="stylesheet" href="css/normalize.min.css" />
+	<!-- <link rel="stylesheet" href="css/libs.min.css"> -->
+	<link rel="stylesheet" href="css/style.min.css" />
+
+</head>
+
+<body>
+	<section class="main-section">
+		<header class="header main-section__header container">
+			<div class="logo">
+				<div class="logo__text">
+					Лаборатория <br>
+					<span class="logo__span">контента</span>
+				</div>
+				
+			</div>
+			<div class="header-phone">
+				<a href="tel:+79994693108" class="header-phone__phone">+7 (999) 469-31-08</a>
+				<a href="#" class="header-phone__callback">Заказать обратный звонок</a>
+			</div>
 		</header>
 
-		<main class="page-main">
-			<section>
-				<!-- content -->
-			</section>
+		<div class="main container">
+			<h1 class="main__header">
+				<span class="main__important-text">
+					Профессиональное ведение контента
+				</span>				 
+				в ваших социальных сетях от 5 000 руб./ мес
+			</h1>
 
-			<section>
-				<!-- content -->
-			</section>
-		</main>
+			<a href="#" class="button main__button">Оставить заявку</a>
+		</div>
+	</section>
 
-		<footer class="page-footer">
-			<h1 class="visually-hidden"></h1>
+	<main class="page-main">
+		<section>
 			<!-- content -->
-		</footer>
+		</section>
 
-		<!-- <script src="js/libs.min.js"></script> -->
-		<script src="js/common.min.js"></script>
-	</body>
+		<section>
+			<!-- content -->
+		</section>
+	</main>
+
+	<footer class="page-footer">
+		<h1 class="visually-hidden"></h1>
+		<!-- content -->
+	</footer>
+
+	<!-- <script src="js/libs.min.js"></script> -->
+	<script src="js/common.min.js"></script>
+</body>
+
 </html>
