made up some sections

--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,16 @@
 	<section class="main-section">
 		<header class="header main-section__header container">
 			<div class="logo">
-				<div class="logo__text">
-					Лаборатория <br>
-					<span class="logo__span">контента</span>
-				</div>
-				
+				Лаборатория <br>
+				<strong>контента</strong>
 			</div>
 			<div class="header-phone">
-				<a href="tel:+79994693108" class="header-phone__phone">+7 (999) 469-31-08</a>
+				<a href="tel:+79994693108" class="header-phone__phone phone">+7 (999) 469-31-08</a>
 				<a href="#" class="header-phone__callback">Заказать обратный звонок</a>
 			</div>
 		</header>
 
-		<div class="main container">
+		<main class="main container">
 			<h1 class="main__header">
 				<span class="main__important-text">
 					Профессиональное ведение контента
@@ -47,22 +44,107 @@
 			</h1>
 
 			<a href="#" class="button main__button">Оставить заявку</a>
+		</main>
+	</section>
+
+	<section class="services-section">
+		<div class="container">
+			<h2 class="section-header">Наши услуги</h2>
+
+			<div class="services-section__services">
+				<div class="services-section__item">
+					Разработка стратегии и 
+					<strong>составление контент-плана</strong>
+				</div>
+				<div class="services-section__item">
+					Графическое и функциональное 
+					<strong>наполнение ваших страниц в соц. сетях.</strong>
+				</div>
+				<div class="services-section__item">
+					<strong>Профессиональное ведение контента</strong>
+					в VK,FB, INSTAGRAM, OK
+				</div>
+				<div class="services-section__item">
+					<strong>Наполнение контентом сайта</strong>
+					(Статьи, товары и.т.д)
+				</div>
+			</div>
 		</div>
 	</section>
 
-	<main class="page-main">
-		<section>
-			<!-- content -->
-		</section>
+	<section class="algorithm-section">
+		<div class="container">
+			<h2 class="section-header algorithm-section__header">Алгоритм работы</h2>
 
-		<section>
-			<!-- content -->
-		</section>
-	</main>
+			<div class="algorithm">
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node"></div>
+					<div class="algorithm__description-node">
+						<div class="algorithm__description-text">Брифинг</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-	<footer class="page-footer">
-		<h1 class="visually-hidden"></h1>
-		<!-- content -->
+	<section class="calculator-section">
+		<div class="container">
+			<div class="calculator-section__flask"></div>
+			<div class="calculator-section__calculator">
+				<h2 class="section-header">Стоимость</h2>
+			</div>
+		</div>
+	</section>
+
+	<section class="about-section">
+		<div class="container">
+			<h2 class="section-header">О нас</h2>
+
+			<div class="about-section__text">
+				<strong>Компания "Контентлаб"</strong> оказывает профессиональные услуги по 
+				ведению контента сообществ в социальных сетях. В компании 
+				работают специалисты из разных маркетинговых агентств. Перед 
+				приемом на работу все сотрудники проходят специальное 
+				обучение. Перед запуском, мы изучаем ваш продукт и проводим 
+				дополнительное обучение и тестирование сотрудника, прикрепленного 
+				к проекту. Вся работа ведется строго по договору.
+			</div>
+		</div>
+	</section>
+
+	<section class="request-section">
+		<div class="container">
+			<div class="request-section__content">
+				<h2 class="section-header request-section__header">
+					Мы знаем <strong>формулу правильного контента!</strong>
+				</h2>
+
+				<div class="request-section__text">
+					Оставьте заявку сейчас и получите месяц ведения в подарок!
+				</div>
+
+				<a href="#" class="button">Оставить заявку</a>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container footer__container">
+			<div class="footer__item logo logo_footer">
+				Лаборатория <br>
+				<strong>контента</strong>
+			</div>
+			<div class="footer__item footer__copyright">
+				(с)Лаборатория контента <br>
+				contlab.ru 2020
+			</div>
+			<div class="footer__item footer__contacts">
+				<div>
+					<a href="tel:+79994693108" class="footer__phone phone">+7 (999) 469-31-08</a>
+					<a href="mailto:info@contlab.ru" target=_blank class="email footer__email">info@contlab.ru</a>
+				</div>
+			</div>
+		</div>
 	</footer>
 
 	<!-- <script src="js/libs.min.js"></script> -->
