--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,10 @@
 
 	<section class="services-section">
 		<div class="container">
-			<h2 class="section-header">Наши услуги</h2>
+			<h2 class="section-header">
+				Наши услуги
+				<div class="section-header__background">Our Services</div>
+			</h2>
 
 			<div class="services-section__services">
 				<div class="services-section__item">
@@ -74,7 +77,10 @@
 
 	<section class="algorithm-section">
 		<div class="container">
-			<h2 class="section-header algorithm-section__header">Алгоритм работы</h2>
+			<h2 class="section-header algorithm-section__header">
+				Алгоритм работы
+				<div class="section-header__background">Algorithm</div>
+			</h2>
 
 			<div class="algorithm">
 				<div class="algorithm__entity">
@@ -88,26 +94,92 @@
 	</section>
 
 	<section class="calculator-section">
-		<div class="container">
-			<div class="calculator-section__flask"></div>
+		<div class="container calculator-section__container">
+			<div class="calculator-section__flask-section">
+				<div class="flask calculator-section__flask">
+					<div class="flask__full"></div>
+				</div>
+				<div class="calculator-section__total">
+					Итого:
+					<span class="calculator-section__total-count">15 000</span>
+					руб. / мес
+				</div>
+			</div>
 			<div class="calculator-section__calculator">
-				<h2 class="section-header">Стоимость</h2>
+				<h2 class="section-header calculator-section__header">
+					Стоимость
+					<div class="section-header__background">Cost</div>
+				</h2>
+
+				<div class="checkboxes calculator-section__checkboxes">
+					<label class="checkboxes__item checkbox-label">
+						<label class="checkbox checkbox-label__checkbox">
+							<input class="checkbox__input" type="checkbox" name="vk">
+							<div class="checkbox__mark"></div>
+						</label>
+						VK
+					</label>
+					<label class="checkboxes__item checkbox-label">
+						<label class="checkbox checkbox-label__checkbox">
+							<input class="checkbox__input" type="checkbox" name="instagram">
+							<div class="checkbox__mark"></div>
+						</label>
+						Instagram
+					</label>
+					<label class="checkboxes__item checkbox-label">
+						<label class="checkbox checkbox-label__checkbox">
+							<input class="checkbox__input" type="checkbox" name="fb">
+							<div class="checkbox__mark"></div>
+						</label>
+						FB
+					</label>
+					<label class="checkboxes__item checkbox-label">
+						<label class="checkbox checkbox-label__checkbox">
+							<input class="checkbox__input" type="checkbox" name="ok">
+							<div class="checkbox__mark"></div>
+						</label>
+						Одноклассники
+					</label>
+				</div>
+
+				<div class="range calculator-section__range">
+					<div class="range__filled"></div>
+					<div class="range__thumb">
+						<div class="range__count">10</div>
+						<div class="range__text">Постов в неделю</div>
+					</div>
+				</div>
+
+				<label class="checkbox-label calculator-section__checkbox-label">
+					<label class="checkbox checkbox-label__checkbox">
+						<input class="checkbox__input" type="checkbox" name="design-content">
+						<div class="checkbox__mark"></div>
+					</label>
+					Дизайнерское оформление сетки контента
+				</label>
+
+				<a href="#" class="button">Оставить заявку</a>
 			</div>
 		</div>
 	</section>
 
 	<section class="about-section">
 		<div class="container">
-			<h2 class="section-header">О нас</h2>
+			<div class="about-section__content">
+				<h2 class="section-header about-section__header">
+					О нас
+					<div class="section-header__background">About us</div>
+				</h2>
 
-			<div class="about-section__text">
-				<strong>Компания "Контентлаб"</strong> оказывает профессиональные услуги по 
-				ведению контента сообществ в социальных сетях. В компании 
-				работают специалисты из разных маркетинговых агентств. Перед 
-				приемом на работу все сотрудники проходят специальное 
-				обучение. Перед запуском, мы изучаем ваш продукт и проводим 
-				дополнительное обучение и тестирование сотрудника, прикрепленного 
-				к проекту. Вся работа ведется строго по договору.
+				<div class="about-section__text">
+					<strong>Компания "Контентлаб"</strong> оказывает профессиональные услуги по 
+					ведению контента сообществ в социальных сетях. В компании 
+					работают специалисты из разных маркетинговых агентств. Перед 
+					приемом на работу все сотрудники проходят специальное 
+					обучение. Перед запуском, мы изучаем ваш продукт и проводим 
+					дополнительное обучение и тестирование сотрудника, прикрепленного 
+					к проекту. Вся работа ведется строго по договору.
+				</div>
 			</div>
 		</div>
 	</section>
