made up algorithm

--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,69 @@
 
 			<div class="algorithm">
 				<div class="algorithm__entity">
-					<div class="algorithm__main-node"></div>
-					<div class="algorithm__description-node">
-						<div class="algorithm__description-text">Брифинг</div>
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/1.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">01</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Брифинг</div>
+					</div>
+				</div>
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/2.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">02</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Анализ бизнеса и конкурентов</div>
+					</div>
+				</div>
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/3.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">03</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Стратегия</div>
+					</div>
+				</div>
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/4.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">04</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Контент план</div>
+					</div>
+				</div>
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/5.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">05</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Обучение специалиста</div>
+					</div>
+				</div>
+				<div class="algorithm__entity">
+					<div class="algorithm__main-node algorithm-node">
+						<div class="algorithm-node__inner"></div>
+						<div style="background-image: url(./img/algorithm/6.png);" class="algorithm-node__image"></div>
+						<div class="algorithm-node__number">06</div>
+					</div>
+					<div class="algorithm__description-node algorithm-node algorithm-node_description">
+						<div class="algorithm-node__inner"></div>
+						<div class="algorithm-node__text">Запуск</div>
 					</div>
 				</div>
 			</div>
