finished desktop layout

--- a/src/index.html
+++ b/src/index.html
@@ -49,27 +49,57 @@
 
 	<section class="services-section">
 		<div class="container">
-			<h2 class="section-header">
+			<h2 class="section-header services-section__header">
 				Наши услуги
 				<div class="section-header__background">Our Services</div>
 			</h2>
 
 			<div class="services-section__services">
-				<div class="services-section__item">
-					Разработка стратегии и 
-					<strong>составление контент-плана</strong>
+				<div class="service services-section__item">
+					<div class="service__illustration service__illustration_1">
+						<div class="service__circle service__circle_1"></div>
+						<div class="service__circle service__circle_2"></div>
+						<div class="service__circle service__circle_3"></div>
+						<div class="service__image"></div>
+					</div>
+					<div class="service__content">
+						Разработка стратегии и 
+						<strong>составление контент-плана</strong>
+					</div>
 				</div>
-				<div class="services-section__item">
-					Графическое и функциональное 
-					<strong>наполнение ваших страниц в соц. сетях.</strong>
+				<div class="service services-section__item">
+					<div class="service__illustration service__illustration_2">
+						<div class="service__circle service__circle_1"></div>
+						<div class="service__circle service__circle_2"></div>
+						<div class="service__image"></div>
+					</div>
+					<div class="service__content">
+						Графическое и функциональное 
+						<strong>наполнение ваших страниц в соц. сетях.</strong>
+					</div>
 				</div>
-				<div class="services-section__item">
-					<strong>Профессиональное ведение контента</strong>
-					в VK,FB, INSTAGRAM, OK
+				<div class="service services-section__item">
+					<div class="service__illustration service__illustration_3">
+						<div class="service__circle service__circle_1"></div>
+						<div class="service__circle service__circle_2"></div>
+						<div class="service__image"></div>
+					</div>
+					<div class="service__content">
+						<strong>Профессиональное ведение контента</strong>
+						в VK,FB, INSTAGRAM, OK
+					</div>
 				</div>
-				<div class="services-section__item">
-					<strong>Наполнение контентом сайта</strong>
-					(Статьи, товары и.т.д)
+				<div class="service services-section__item">
+					<div class="service__illustration service__illustration_4">
+						<div class="service__circle service__circle_1"></div>
+						<div class="service__circle service__circle_2"></div>
+						<div class="service__circle service__circle_3"></div>
+						<div class="service__image"></div>
+					</div>
+					<div class="service__content">
+						<strong>Наполнение контентом сайта</strong>
+						(Статьи, товары и.т.д)
+					</div>
 				</div>
 			</div>
 		</div>
