--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<section class="main-section">
+	<section class="section main-section">
 		<header class="header main-section__header container">
 			<div class="logo">
 				Лаборатория <br>
@@ -47,7 +47,7 @@
 		</main>
 	</section>
 
-	<section class="services-section">
+	<section class="section services-section">
 		<div class="container">
 			<h2 class="section-header services-section__header">
 				Наши услуги
@@ -105,7 +105,7 @@
 		</div>
 	</section>
 
-	<section class="algorithm-section">
+	<section class="section algorithm-section">
 		<div class="container">
 			<h2 class="section-header algorithm-section__header">
 				Алгоритм работы
@@ -183,7 +183,7 @@
 		</div>
 	</section>
 
-	<section class="calculator-section">
+	<section class="section calculator-section">
 		<div class="container calculator-section__container">
 			<div class="calculator-section__flask-section">
 				<div class="flask calculator-section__flask">
@@ -253,7 +253,7 @@
 		</div>
 	</section>
 
-	<section class="about-section">
+	<section class="section about-section">
 		<div class="container">
 			<div class="about-section__content">
 				<h2 class="section-header about-section__header">
@@ -274,7 +274,7 @@
 		</div>
 	</section>
 
-	<section class="request-section">
+	<section class="section request-section">
 		<div class="container">
 			<div class="request-section__content">
 				<h2 class="section-header request-section__header">
@@ -290,7 +290,7 @@
 		</div>
 	</section>
 
-	<footer class="footer">
+	<footer class="section footer">
 		<div class="container footer__container">
 			<div class="footer__item logo logo_footer">
 				Лаборатория <br>
