--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
 					</div>
 					<div class="algorithm__description-node algorithm-node algorithm-node_description">
 						<div class="algorithm-node__inner"></div>
-						<div class="algorithm-node__text">Анализ бизнеса и конкурентов</div>
+						<div class="algorithm-node__text algorithm-node__text_mobile-fix">Анализ бизнеса и конкурентов</div>
 					</div>
 				</div>
 				<div class="algorithm__entity">
