--- a/src/index.html
+++ b/src/index.html
@@ -285,22 +285,24 @@
 					Оставьте заявку сейчас и получите месяц ведения в подарок!
 				</div>
 
-				<a href="#" class="button">Оставить заявку</a>
+				<a href="#" class="button request-section__button">Оставить заявку</a>
 			</div>
 		</div>
 	</section>
 
 	<footer class="section footer">
 		<div class="container footer__container">
-			<div class="footer__item logo logo_footer">
-				Лаборатория <br>
-				<strong>контента</strong>
+			<div class="footer__item footer__item_logo">
+				<div class="logo logo_footer">
+					Лаборатория <br>
+					<strong>контента</strong>
+				</div>
 			</div>
-			<div class="footer__item footer__copyright">
+			<div class="footer__item footer__item_copyright footer__copyright">
 				(с)Лаборатория контента <br>
 				contlab.ru 2020
 			</div>
-			<div class="footer__item footer__contacts">
+			<div class="footer__item footer__item_contacts footer__contacts">
 				<div>
 					<a href="tel:+79994693108" class="footer__phone phone">+7 (999) 469-31-08</a>
 					<a href="mailto:info@contlab.ru" target=_blank class="email footer__email">info@contlab.ru</a>
