--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
 	</footer>
 
 	<!-- <script src="js/libs.min.js"></script> -->
-	<script src="js/common.min.js"></script>
+	<script src="js/main.min.js"></script>
 </body>
 
 </html>
