--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
 				</div>
 				<div class="calculator-section__total">
 					Итого:
-					<span class="calculator-section__total-count">15 000</span>
+					<span class="calculator-section__total-count">0</span>
 					руб. / мес
 				</div>
 			</div>
@@ -204,28 +204,28 @@
 				<div class="checkboxes calculator-section__checkboxes">
 					<label class="checkboxes__item checkbox-label">
 						<label class="checkbox checkbox-label__checkbox">
-							<input class="checkbox__input" type="checkbox" name="vk">
+							<input class="checkbox__input checkbox__input_social" type="checkbox" name="vk">
 							<div class="checkbox__mark"></div>
 						</label>
 						VK
 					</label>
 					<label class="checkboxes__item checkbox-label">
 						<label class="checkbox checkbox-label__checkbox">
-							<input class="checkbox__input" type="checkbox" name="instagram">
+							<input class="checkbox__input checkbox__input_social" type="checkbox" name="instagram">
 							<div class="checkbox__mark"></div>
 						</label>
 						Instagram
 					</label>
 					<label class="checkboxes__item checkbox-label">
 						<label class="checkbox checkbox-label__checkbox">
-							<input class="checkbox__input" type="checkbox" name="fb">
+							<input class="checkbox__input checkbox__input_social" type="checkbox" name="fb">
 							<div class="checkbox__mark"></div>
 						</label>
 						FB
 					</label>
 					<label class="checkboxes__item checkbox-label">
 						<label class="checkbox checkbox-label__checkbox">
-							<input class="checkbox__input" type="checkbox" name="ok">
+							<input class="checkbox__input checkbox__input_social" type="checkbox" name="ok">
 							<div class="checkbox__mark"></div>
 						</label>
 						Одноклассники
@@ -242,7 +242,7 @@
 
 				<label class="checkbox-label calculator-section__checkbox-label">
 					<label class="checkbox checkbox-label__checkbox">
-						<input class="checkbox__input" type="checkbox" name="design-content">
+						<input class="checkbox__input checkbox__input_design" type="checkbox" name="design-content">
 						<div class="checkbox__mark"></div>
 					</label>
 					Дизайнерское оформление сетки контента
