--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content=""> <!-- seo -->
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon.png">
@@ -211,7 +211,7 @@
 					</label>
 					<label class="checkboxes__item checkbox-label">
 						<label class="checkbox checkbox-label__checkbox">
-							<input class="checkbox__input checkbox__input_social" type="checkbox" name="instagram">
+							<input class="checkbox__input checkbox__input_social" type="checkbox" name="instagram" checked>
 							<div class="checkbox__mark"></div>
 						</label>
 						Instagram
@@ -236,7 +236,7 @@
 					<div class="range__filled"></div>
 					<div class="range__thumb">
 						<div class="range__count">10</div>
-						<div class="range__text">Постов в неделю</div>
+						<div class="range__text">Постов в месяц</div>
 					</div>
 				</div>
 
