--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
 					Дизайнерское оформление сетки контента
 				</label>
 
-				<a href="#" class="button">Оставить заявку</a>
+				<a href="#" class="button calculator-section__button">Оставить заявку</a>
 			</div>
 		</div>
 	</section>
